Update EmacsMate with my configuration.

--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -47,13 +47,36 @@ let them live in the backups/directory inside of the emacsmate directory.
   (unless (file-exists-p (expand-file-name "backups" emacsmate-dir))
     (make-directory (expand-file-name "backups" emacsmate-dir)))
   
-  (setq backup-directory-alist `(("." . ,(expand-file-name "backups"
-                                                           emacsmate-dir))))
+  (setq auto-save-file-name-transforms
+        `((".*" ,temporary-file-directory t)))
+  
+  (setq backup-directory-alist
+        `(("." . ,(expand-file-name "backups"
+                                    emacsmate-dir))))
+  
+  ;; From http://emacswiki.org/emacs/BackupDirectory
+  (message "Deleting old backup files...")
+  (let ((week (* 60 60 24 7))
+        (current (float-time (current-time))))
+    (dolist (file (directory-files temporary-file-directory t))
+      (when (and (backup-file-name-p file)
+                 (> (- current (float-time (fifth (file-attributes file))))
+                    week))
+        (message "%s" file)
+        (delete-file file))))
+  
 #+END_SRC
 
 ** Encoding
 ** Save Automatically when
 *** Focus is lost?
+I don't believe this can be implemented in emacs (though it can in
+Xemacs).  See:
+http://stackoverflow.com/questions/1230245/how-to-automatically-save-files-on-lose-focus-in-emacs
+
+However, saving can be toggled when actions occur in emacs.
+
+
 
 * Bookmarks
 :PROPERTIES:
@@ -157,6 +180,7 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
 #+BEGIN_SRC emacs-lisp
   (defvar emacsmate-packages
     '(
+      org-outlook
       auto-complete
       auto-indent-mode
       autopair
@@ -168,8 +192,10 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
       pos-tip
       smex
       yasnippet
-      )
+      textmate-to-yas
+      tabbar-ruler)
     "Libraries that should be installed by default.")
+  
 #+END_SRC
 
 *** ELPA functions
@@ -199,9 +225,6 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
           normal-top-level-add-subdirs-to-load-path))
       (symbol-value 'default-directory)))
 #+END_SRC
-
-
-
 *** The emacsmate-coding-hook:
 A single hook holding those functions which should be run in *every*
 code buffer.
@@ -280,7 +303,7 @@ a lambda doesn't already exist in the list.
   (setq package-user-dir (concat emacsmate-dir "elpa"))
   (setq custom-file (concat emacsmate-dir "custom.el"))
 #+END_SRC
-** Ubiquitous Packages 
+** Ubiquitous Packages
 #+BEGIN_SRC emacs-lisp
   (require 'package)
   (require 'cl)
@@ -311,7 +334,6 @@ a lambda doesn't already exist in the list.
 (if (eq system-type 'darwin)
     (setq system-name (car (split-string system-name "\\."))))
 #+END_SRC
-
 ** Auto-install
 Instead of requiring that you use all the features, the features are
 set up as you go using emacs lisp package archive.  The following
@@ -337,7 +359,7 @@ macro allows auto-installing of modes or packages:
                           (symbol-name ',package)))
          (unless (file-exists-p (concat fn ".el"))
            (setq fn (format "%s/%s" (emacsmate-package-dir ',package)
-                            (symbol-name function)))
+                            (symbol-name ',function)))
            (unless (file-exists-p (concat fn ".el"))
              (setq fn nil))))
        (if (and fn (package-installed-p ',package))
@@ -389,6 +411,7 @@ macro allows auto-installing of modes or packages:
           ("\\.[Ss][Tt][Aa][Tt][Aa]\\'"  stata-mode ess "lisp/ess-site")
           ("\\.[RrSs][Nn][Ww]\\'" Rnw-mode ess "lisp/ess-site")
           ("\\.[Nn][Ss][Ii]" nsis-mode nsis-mode)
+          ("\\.[Uu][Mm][Ll]" plantuml-mode plantuml-mode)
           ("\\.[Nn][Ss][Hh]" nsis-mode nsis-mode)))
   
   
@@ -420,7 +443,6 @@ macro allows auto-installing of modes or packages:
   ;;(message "%s" (macroexpand '(autoinstall magit-status magit)))
   
 #+END_SRC
-
 ** Printing
 :PROPERTIES:
 :ID: 3484edff-15e3-47d5-85e5-76251d4b8776
@@ -499,7 +521,6 @@ Help should allow apropos binding
 #+BEGIN_SRC emacs-lisp
 (global-set-key (kbd "C-h a") 'apropos)
 #+END_SRC
-
 
 ** Default Package/Modes Setup
 *** Autopair
@@ -737,11 +758,13 @@ I like the look.  I don't like the arrow keys not doing what I expect...
 
 *** Yasnippet
 #+BEGIN_SRC emacs-lisp
+  (when (emacsmate-packge-load-path 'textmate-to-yas)
+    (require 'textmate-to-yas))
   (yas-global-mode)
   (when (not (file-exists-p (expand-file-name "snippets" emacsmate-dir)))
     (make-directory (expand-file-name "snippets" emacsmate-dir)))
   
-  (yas-load-directory  (expand-file-name "snippets" emacsmate-dir))
+  (yas-load-directory (expand-file-name "snippets" emacsmate-dir))
   
   (defun yas-org-very-safe-expand ()
     (let ((yas-fallback-behavior 'return-nil)) (yas-expand)))
@@ -757,103 +780,11 @@ I like the look.  I don't like the arrow keys not doing what I expect...
 #+END_SRC
 
 *** Org-mode
-This is taken from
-https://raw.github.com/eschulte/emacs24-starter-kit/master/starter-kit-org.org
-
-Configuration for the eminently useful [[http://orgmode.org/][Org Mode]].
-
-Org-mode is for keeping notes, maintaining ToDo lists, doing project
-planning, and authoring with a fast and effective plain-text system.
-Org Mode can be used as a very simple folding outliner or as a complex
-GTD system or tool for reproducible research and literate programming.
-
-For more information on org-mode check out [[http://orgmode.org/worg/][worg]], a large Org-mode wiki
-which is also *implemented using* Org-mode and [[http://git-scm.com/][git]].
-
-**** Org-Mode Hook -- Keybindings
-   :PROPERTIES:
-   :CUSTOM_ID: keybindings
-   :END:
-#+begin_src emacs-lisp
-  (add-hook 'org-mode-hook
-            (lambda ()
-              (local-set-key "\M-\C-n" 'outline-next-visible-heading)
-              (local-set-key "\M-\C-p" 'outline-previous-visible-heading)
-              (local-set-key "\M-\C-u" 'outline-up-heading)
-              ;; table
-              (local-set-key "\M-\C-w" 'org-table-copy-region)
-              (local-set-key "\M-\C-y" 'org-table-paste-rectangle)
-              (local-set-key "\M-\C-l" 'org-table-sort-lines)
-              ;; display images
-              (local-set-key "\M-I" 'org-toggle-iimage-in-org)))
-#+end_src
-
-**** Speed keys
-   :PROPERTIES:
-   :CUSTOM_ID: speed-keys
-   :END:
-Speed commands enable single-letter commands in Org-mode files when
-the point is at the beginning of a headline, or at the beginning of a
-code block.
-
-See the `=org-speed-commands-default=' variable for a list of the keys
-and commands enabled at the beginning of headlines.  All code blocks
-are available at the beginning of a code block, the following key
-sequence =C-c C-v h= (bound to `=org-babel-describe-bindings=') will
-display a list of the code blocks commands and their related keys.
-
-#+begin_src emacs-lisp
-  (setq org-use-speed-commands t)
-#+end_src
-
-**** Code blocks
-   :PROPERTIES:
-   :CUSTOM_ID: babel
-   :END:
-This activates a number of widely used languages, you are encouraged
-to activate more languages using the customize interface for the
-`=org-babel-load-languages=' variable, or with an elisp form like the
-one below.  The customize interface of `=org-babel-load-languages='
-contains an up to date list of the currently supported languages.
-#+begin_src emacs-lisp 
-  (org-babel-do-load-languages
-   'org-babel-load-languages
-   '((emacs-lisp . t)
-     (R . t)
-     (sh . t)))
-#+end_src
-
-You are encouraged to add the following to your personal configuration.
-#+begin_src emacs-lisp
-  (setq org-confirm-babel-evaluate nil)
-#+end_src
-
-**** Code block fontification
-   :PROPERTIES:
-   :CUSTOM_ID: code-block-fontification
-   :END:
-The following displays the contents of code blocks in Org-mode files
-using the major-mode of the code.  It also changes the behavior of
-=TAB= to as if it were used in the appropriate major mode.  This means
-that reading and editing code form inside of your Org-mode files is
-much more like reading and editing of code using its major mode.
-#+begin_src emacs-lisp
-  (setq org-src-fontify-natively t)
-  (setq org-src-tab-acts-natively t)
-#+end_src
-
-**** The Library of Babel
-   :PROPERTIES:
-   :CUSTOM_ID: library-of-babel
-   :END:
-The library of babel contains makes many useful functions available
-for use by code blocks in *any* emacs file.  See the actual
-=library-of-babel.org= (located in the Org-mode =contrib/babel=
-directory) file for information on the functions, and see
-[[http://orgmode.org/worg/org-contrib/babel/intro.php#library-of-babel][worg:library-of-babel]] for more usage information.
-
-Code blocks can be loaded into the library of babel from any Org-mode
-file using the `org-babel-lob-ingest' function.
+Org mode setup is in a separate file
+#+BEGIN_SRC emacs-lisp
+  (emacsmate-load-org
+   (expand-file-name "emacsmate-org.org" emacsmate-dir))
+#+END_SRC
 ** Misc Settings
 *** Window systems Settings
 #+begin_src emacs-lisp 
@@ -910,6 +841,23 @@ file using the `org-babel-lob-ingest' function.
   (random t)
 #+END_SRC
 
+*** Save History
+Turn on save history to save history between sessions.
+#+BEGIN_SRC emacs-lisp
+  (savehist-mode 1)
+#+END_SRC
+*** Tabbar/Ruler
+Setup global tabbar and ruler.
+#+BEGIN_SRC emacs-lisp
+  (setq tabbar-ruler-global-tabbar 't) ; If you want tabbar
+  (setq tabbar-ruler-global-ruler 't) ; if you want a global ruler
+  (setq tabbar-ruler-popup-menu 't) ; If you want a popup menu.
+  (setq tabbar-ruler-popup-toolbar 't) ; If you want a popup toolbar
+  (when (emacsmate-packge-load-path 'tabbar-ruler)
+    (require 'tabbar-ruler))
+  
+#+END_SRC
+
 *** Cosmetics
 
 #+begin_src emacs-lisp
@@ -924,20 +872,3 @@ file using the `org-babel-lob-ingest' function.
      (set-face-foreground 'magit-diff-del "red3")))
 #+end_src
 
-** Yasnippet bug fix
-The current version of Yasnippet is broken.  
-
-#+BEGIN_SRC emacs-lisp
-  (defun yas--trigger-key-for-fallback ()
-    ;; When `yas-trigger-key' is <tab> it correctly overrides
-    ;; org-mode's <tab>, for example and searching for fallbacks
-    ;; correctly returns `org-cycle'. However, most other modes bind
-    ;; "TAB" (which is translated from <tab>), and calling
-    ;; (key-binding "TAB") does not place return that command into
-    ;; our command-2 local. So we cheat.
-    ;;
-    (if (save-match-data
-          (string-match "\\(?:<\\|\\[\\)tab\\(?:\\]\\|>\\)" (format "%s" yas-trigger-key)))
-        "TAB"
-      yas-trigger-key))
-#+END_SRC
